test/ppx_irmin/deriver/errors/unsupported_type_open_object.ml
type 'a t = < .. > [@@deriving irmin]
