test/ppx_irmin/deriver/errors/unsupported_type_open_object.expected
File "unsupported_type_open_object.ml", line 1, characters 0-37:
Error: ppx_irmin: open object type < .. >  encountered. Object types must be closed.
